--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "eslint": "^9.11.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sm373373/spark-dataframe-to-pandas"
   }
 }
